src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-omT-dwF1000-dhU-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen maximized: true\ndefault column width: F1000\ndefault window height: U\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1239 × 688, bounds: 1239 × 688, states: [Activated]
